# invenio-dev-container

./: .invenio  Pipfile  README.md  celerybeat-schedule.db  docker-compose.full.yml  docker-services.yml  invenio.cfg
.devcontainer/: devcontainer.json
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/invenio_dev_containers/: views.py  webpack.py
