
[metadata]
name = invenio-dev-containers

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    invenio_dev_containers_views = invenio_dev_containers.views:create_blueprint
invenio_assets.webpack =
    invenio_dev_containers_theme = invenio_dev_containers.webpack:theme
